Frontend Debugging - [DONE] Issue on the carrier result page.   => Seems paragraph tag settings in `home.scss` was a global setting.
- [UNCONFIRMED] FontAwesome not showing on dashboard and register?
  => May need to check on your laptop.

- [UNCONFIRMED] Landing page doesn't fit the browser.
  => May need to check on your laptop.

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,50 +1,52 @@
-section[id^="landing"] {
-  h1, h5 {
-    margin-bottom: 0.5em;
-  }
-  h5 {
-    font-weight: bolder;
-  }
-  p, li {
-    line-height: calc(1.35em + (1.6 - 1.35) * ((100vw - (#{$font__p} * 25))/(90 - 28)));
-    font-size: calc(1.5rem + (1.65 - 1.5) * ((100vw - (#{$font__p} * 25))/(90 - 28)));
-  }
-  ul.points {
-    li {
-      align-items: flex-start;
+#home {
+  section[id^="landing"] {
+    h1, h5 {
+      margin-bottom: 0.5em;
     }
-    i.fas {
-      margin-right: 0.5em;
-      line-height: inherit;
+    h5 {
+      font-weight: bolder;
+    }
+    p, li {
+      line-height: calc(1.35em + (1.6 - 1.35) * ((100vw - (#{$font__p} * 25))/(90 - 28)));
+      font-size: calc(1.5rem + (1.65 - 1.5) * ((100vw - (#{$font__p} * 25))/(90 - 28)));
+    }
+    ul.points {
+      li {
+        align-items: flex-start;
+      }
+      i.fas {
+        margin-right: 0.5em;
+        line-height: inherit;
+      }
+    }
+    p + .btn {
+      margin-top: 2em;
+    }
+    .landingContainer + .landingContainer {
+      margin-top: 4rem;
     }
   }
-  p + .btn {
-    margin-top: 2em;
-  }
-  .landingContainer + .landingContainer {
-    margin-top: 4rem;
-  }
-}
-.fullscreen {
-  align-items: center;
-  display: flex;
-  min-height: 100vh;
-  justify-content: center;
-  padding: $spacer--xs $spacer--xs $spacer--xs $spacer--xs;
-  width: 100vw;
-  flex-direction: column;
-  &:first-child {
-    margin-top: -$navbar__height;
-  }
-  &:last-child {
-    margin-bottom: -$footer__height;
+  .fullscreen {
+    align-items: center;
+    display: flex;
+    min-height: 100vh;
+    justify-content: center;
+    padding: $spacer--xs $spacer--xs $spacer--xs $spacer--xs;
+    width: 100vw;
+    flex-direction: column;
+    &:first-child {
+      margin-top: -$navbar__height;
+    }
+    &:last-child {
+      margin-bottom: -$footer__height;
+    }
   }
 }
 
 
 
 @media (min-width: 992px) {
-  section[id^="landing"] {
+  #home {
     #landingDescriptionTwo {
       display: flex;
       flex-direction: initial;
